--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "reactjs-popup": "^2.0.3",
+    "socket-client": "^1.0.0",
+    "socket.io-client": "^3.0.1",
     "yup": "^0.29.3"
   },
   "scripts": {
