--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "antd": "^4.6.3",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "formik": "^2.1.5",
+    "http-proxy-middleware": "^1.0.6",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
@@ -19,11 +25,14 @@
     "react-scripts": "3.4.3",
     "reactjs-popup": "^2.0.3",
     "socket-client": "^1.0.0",
+    "socket.io": "^3.0.3",
     "socket.io-client": "^3.0.1",
     "yup": "^0.29.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all --parallel start:**",
+    "start:client": "react-scripts start",
+    "start:server": "node ./server/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
