--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "formik": "^2.1.5",
     "http-proxy-middleware": "^1.0.6",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "npm-run-all": "^4.1.5",
