--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "reactjs-popup": "^2.0.3",
+    "semantic-ui-react": "^2.0.1",
     "socket-client": "^1.0.0",
     "socket.io": "^3.0.3",
     "socket.io-client": "^3.0.1",
